# tut_gen_ai

./: INSTRUCTIONS.md  NOTES.md  Other_references.md  README.md  ROADMAP.md
00-prereqs/: NOTES.md  Notes_calculus.md  Notes_linear-algebra.md  Notes_numpy.md  Notes_probability.md  Notes_pytorch.md  README.md  main.py  numpy_tutorial.ipynb  pyproject.toml  pytorch_deep_learning_blitz.ipynb  pytorch_tutorial.ipynb
00-prereqs/project/: 01_linreg_numpy.ipynb  02_gradient_check.ipynb  03_mlp_numpy.ipynb  04_mlp_pytorch.ipynb
01-neural-nets/: README.md
02-transformer/: README.md
03-modern-llm/: README.md
04-post-training/: README.md
05-ml-systems/: README.md
05-paper-reproductions/: README.md
06-apps/: README.md
06-paper-reproductions/: README.md
07-apps/: README.md
